methodology: learn_bpe, apply_bpe

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -44,6 +44,8 @@
 \include{sections/1-introduction}
 \include{sections/2-goals}
 \include{sections/3-tokenization}
+\include{sections/4-translation}
+\include{sections/5-methodology}
 \include{sections/summary}
 
 % the bibliography
