--- a/doc/sections/4-translation.tex
+++ b/doc/sections/4-translation.tex
@@ -1,7 +1,11 @@
 % Template for a Thesis
 %
-% 3-translation.tex
+% 4-translation.tex
 %
 % Translation
 
 \chapter{Translation}\label{sec:translation}
+
+	1. NMT? open vocabulary problems?
+	2. https://arxiv.org/abs/2004.08728 section 5
+ 	3. fastalign, eflomal
