--- a/doc/main.tex
+++ b/doc/main.tex
@@ -46,6 +46,7 @@
 \include{sections/3-tokenization}
 \include{sections/4-translation}
 \include{sections/5-methodology}
+\include{sections/6-development}
 \include{sections/summary}
 
 % the bibliography
