--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,11 +1,45 @@
 % Encoding: UTF-8
 
+@article{brown1993mathematics,
+  title={The mathematics of statistical machine translation: Parameter estimation},
+  author={Brown, Peter F and Della Pietra, Stephen A and Della Pietra, Vincent J and Mercer, Robert L},
+  journal={Computational linguistics},
+  volume={19},
+  number={2},
+  pages={263--311},
+  year={1993}
+}
+
+@inproceedings{och1999improved,
+  title={Improved alignment models for statistical machine translation},
+  author={Och, Franz Josef and Tillmann, Christoph and Ney, Hermann},
+  booktitle={1999 Joint SIGDAT Conference on Empirical Methods in Natural Language Processing and Very Large Corpora},
+  year={1999}
+}
+
+@article{varga2007parallel,
+  title={Parallel corpora for medium density languages},
+  author={Varga, D{\'a}niel and Hal{\'a}csy, P{\'e}ter and Kornai, Andr{\'a}s and Nagy, Viktor and N{\'e}meth, L{\'a}szl{\'o} and Tr{\'o}n, Viktor},
+  journal={Amsterdam Studies In The Theory And History Of Linguistic Science Series 4},
+  volume={292},
+  pages={247},
+  year={2007},
+  publisher={Amsterdam; Philadelphia; J. Benjamins Pub. Co; 1999}
+}
+
 @book{manning2008introduction,
   title={Introduction to information retrieval},
   author={Manning, Christopher D and Raghavan, Prabhakar and Sch{\"u}tze, Hinrich},
   year={2008},
   publisher={Cambridge university press},
   url={https://nlp.stanford.edu/IR-book/}
+}
+
+@book{koehn2009statistical,
+  title={Statistical machine translation},
+  author={Koehn, Philipp},
+  year={2009},
+  publisher={Cambridge University Press}
 }
 
 @inproceedings{schuster2012japanese,
@@ -23,6 +57,20 @@
   journal={arXiv preprint arXiv:1301.3781},
   year={2013}
 }
+
+@inproceedings{dyer-etal-2013-simple,
+    title = "A Simple, Fast, and Effective Reparameterization of {IBM} Model 2",
+    author = "Dyer, Chris  and
+      Chahuneau, Victor  and
+      Smith, Noah A.",
+    booktitle = "Proceedings of the 2013 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    month = "jun",
+    year = "2013",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/N13-1073",
+    pages = "644--648",
+}
+
 
 @misc{zhang2015text,
     title={Text Understanding from Scratch},
@@ -88,7 +136,6 @@
     booktitle = "Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
     month = "July",
     year = "2018",
-    address = "Melbourne, Australia",
     publisher = "Association for Computational Linguistics",
     url = "https://www.aclweb.org/anthology/P18-1007",
     doi = "10.18653/v1/P18-1007",
