--- a/doc/sections/5-methodology.tex
+++ b/doc/sections/5-methodology.tex
@@ -19,9 +19,8 @@ Using Sennrich et al.'s~\cite{sennrich2015neural} \href{code on Github}{https://
 \begin{enumerate}
 	\item Write learn BPE from corpus algorithm
 	\item Write apply BPE to corpus algorithm
-	\item Write extract alignment script to align files from 2 different languages using fastalign/eflomal
-	\item Write a subword-word alignment script, since fastalign's output are subword alignments and we need word alignments
-	\item calculate alignment scores
+	\item Write extract alignment script
+	\item Write calculate alignment scores script
 \end{enumerate}
 
 The actual code for each step can be found in the next section, Development.
@@ -84,7 +83,7 @@ For example, this is what the excerpt from the corpora above look like after 100
 	German\\
 	\_der \_T rans p or t a ussch u ß \_h at \_für \_die \_z w eite \_L es ung \_v ier \_Ä nder ung s ant r ä ge \_besch l o ss en \_.\\
 	\_s ie \_wer den \_bei \_den \_E U - B ür ger n \_ge w i ß \_das \_G e f ü h l \_für \_das \_Re ch t \_auf \_F r ei z ü g i g k eit \_st ä r k en \_, \_und \_s ie \_wer den \_ge w i ß \_au ch \_beh inder ten \_F a hr er n \_V or tei l e \_b r ingen \_.\\
-	\_der \_ur s p r ü ng lich e \_V or sch la g \_der \_Ko mm iss ion \_w ur de \_v o m \_P ar la ment \_in \_er ster \_L es ung \_o h n e \_Ä nder ungen \_vera b sch ie det \_.\\
+	\_der \_ur s p r ü ng lich e \_V or sch la g \_der \_Ko mm iss ion \_w ur de \_v o m \_P ar la ment \_in \_er ster \_L es ung \_o h n e \_Ä nder ungen \_vera b sch ie det \_.
 \end{quote}
 
 Only the 100 most common units in the language have been merged, so in English we can see the merge of \emph{\_the}, \emph{\_and}, \emph{ment}, and other very common words and affix/suffixes. As for German, we can see very common words being merged such as \emph{\_die}, \emph{\_das}, \emph{\_bei} and so on. When we do 4000 merges:
@@ -102,9 +101,48 @@ Only the 100 most common units in the language have been merged, so in English w
 
 Most words are merged, except \emph{\_dis abled} in English, and \emph{\_T ransp ortausschuß} in German for instance.
 
-\subsection{Obtain alignments from fastalign or eflomal}
+\subsection{Extract alignments}
 
+Write extract alignment script to align files from 2 different languages using fastalign/eflomal
 
+To evaluate if the BPE units are good, bilingual corpora are aligned, and then compared against a gold standard. On the first step, alignment, two algorithms have been used, fastalign and eflomal. The software installation guides can be found in the development section.
+
+These algorithms take English text and German as input and create an alignment file as output. For the example above:
+
+\begin{quote}
+	English sentence: The Committee on Transport and Tourism has adopted four amendments for the second reading .\\
+	German sentence: Der Transportausschuß hat für die zweite Lesung vier Änderungsanträge beschlossen .\\
+	Alignment: 0-0 1-1 2-1 3-1 4-1 5-1 6-2 7-9 8-7 9-8 10-3 11-4 12-5 13-6 14-10\\
+
+	English sentence: The initial Commission proposal was adopted unamended by Parliament on first reading .\\
+	German sentence: Der ursprüngliche Vorschlag der Kommission wurde vom Parlament in erster Lesung ohne Änderungen verabschiedet .\\
+	Alignment: 0-0 1-1 2-4 3-2 3-3 4-5 5-13 6-11 6-12 7-6 8-7 9-8 10-9 11-10 12-14
+\end{quote}
+
+Many words have one-to-one alignment, such as \emph{four}-\emph{vier}, \emph{adopted}-\emph{verabschiedet} and many others. Some others have many-to-one alignments, such as \emph{Committee on Transport and Tourism}-\emph{Transportausschuß} and one-to-many alignments such as \emph{unamended}-\emph{ohne Änderungen}.
+
+In our case however, the input files aren't composed by words, but rather by subwords. And the alignments are done among subwords. As with the example with 4000 merges:
+
+\begin{quote}
+	English sentence: \_the \_Committee \_on \_Transport \_and \_Tourism \_has \_adopted \_four \_amendments \_for \_the \_second \_reading \_.\\
+	German sentence: \_der \_T ransp ortausschuß \_hat \_für \_die \_zweite \_Lesung \_vier \_Änderungsanträge \_beschlossen \_.\\
+	Alignment: 0-0 1-1 2-1 3-1 4-1 5-1 1-2 2-2 3-2 4-2 5-2 1-3 2-3 3-3 4-3 5-3 6-4 7-11 8-9 9-10 10-5 11-6 12-7 13-8 14-12
+\end{quote}
+
+Since the German word \emph{Transportausschuß} is divided into three, namely \emph{T ransp ortausschuß}, the many-to-one alignment from the previous case is now a many-to-many alignment. Now there are subword alignments as opposed to word alignments. The number of alignment has grown from last example.
+
+Because the gold standard against which the system is being evaluated consists of word alignments, it's necesssary to map subword alignments into word alignments.
+
+This script takes English and German corpora and the alignment file as inputs, and outputs a word alignment file.
+
+\begin{quote}
+	English sentence: \_the \_Committee \_on \_Transport \_and \_Tourism \_has \_adopted \_four \_amendments \_for \_the \_second \_reading \_.\\
+	German sentence: \_der \_T ransp ortausschuß \_hat \_für \_die \_zweite \_Lesung \_vier \_Änderungsanträge \_beschlossen \_.\\
+	Subword alignment: 0-0 1-1 2-1 3-1 4-1 5-1 1-2 2-2 3-2 4-2 5-2 1-3 2-3 3-3 4-3 5-3 6-4 7-11 8-9 9-10 10-5 11-6 12-7 13-8 14-12\\
+	Output word alignment: 0-0 1-1 2-1 3-1 4-1 5-1 6-2 7-9 8-7 9-8 10-3 11-4 12-5 13-6 14-10
+\end{quote}
+
+The challenge here lies in the fact that if the BPEs are of good quality, the alignment algorithm will align subword items correctly, and therefore in the subword-to-word mapping, the word alignments will be correct.
 
 \begin{quote}
 	a\\
